<resources>
    <string name="app_name">물 마시는 습관</string>
    <string name="title">물 마시는 습관</string>
    <string name="btn_check">기록확인</string>
    <string name="btn_setting">모드설정</string>
    <string name="t_text1">기능 설정</string>
    <string name="text0">사용자 정보 저장</string>
    <string name="text0_content">저장한 정보를 통해 목표 음수량을 할당합니다.</string>
    <string name="text0_1">목표치 값 설정</string>
    <string name="text0_1_content">목표치로 설정 할 값을 지정합니다.</string>
    <string name="text1">알림 ON/OFF</string>
    <string name="text1_content">알림 기능을 키고 끕니다.</string>
    <string name="text2">알림 출력 간격</string>
    <string name="text2_content">알림 출력 간격을 설정합니다.</string>
    <string name="text3">세척 모드 ON/OFF</string>
    <string name="text3_content">세척 모드 기능을 키고 끕니다.</string>
    <string name="text4">음료 정보 수정</string>
    <string name="text4_content">음료에 대한 정보를 수정합니다.</string>
    <string name="t_text2">앱 설정</string>
    <string name="text5">테마 설정</string>
    <string name="text5_content">앱 테마를 설정 합니다.</string>
    <string name="text6">물 마시는 습관 어플 정보</string>
    <string name="text6_content">어플 정보에 대한 내용이 기술되어 있습니다.</string>
</resources>
